# eOn

./: .buildinfo  .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .hg_archival.txt  .hgignore  .ignore  .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CNAME  Deprecated_Docs.org  Gemfile  LICENSE  Readme.org  SECURITY.md  akmc.py  akmcstate.py  akmcstatelist.py  askmc.py  asv.conf.json  atoms.py  basinhopping.py  bla  coarse_space.py  cog.toml  communicator.py  conda-lock.yml  config.ini  config.py  config.yaml  context7.json  default.nix  default_config.ini  displace.py  distributedreplica.py  (+42 more)
client/: .clang-format  ARTnSaddleSearch.cpp  ARTnSaddleSearch.h  AdditionalHelpers.cc  AdditionalHelpers.hpp  AtomicGPDimer.cpp  AtomicGPDimer.h  BaseStructures.cpp  BaseStructures.h  BaseTypes.hpp  BasinHoppingJob.cpp  BasinHoppingJob.h  BasinHoppingSaddleSearch.cpp  BasinHoppingSaddleSearch.h  BiasedGradientSquaredDescent.cpp  BiasedGradientSquaredDescent.h  BondBoost.cpp  BondBoost.h  Bundling.cpp  Bundling.h  CMakeLists.txt  C_Structs.h  ClientEON.cpp  ClientEON.dox  ClientEON.h  ClientEON.txt  CommandLine.cpp  CommandLine.h  Compression.c  Compression.cpp  Compression.h  ConFileIO.cpp  ConFileIO.h  ConjugateGradients.cpp  ConjugateGradients.h  Constants.cpp  Constants.h  Davidson.cpp  Davidson.h  Depend.mk  (+250 more)
client/.nb/: gpr_eon.md  gpr_eon_pot.md  gpr_eon_pot_free.md  gpr_eon_pot_move-noZeroF.md  gpr_eon_pot_move.md  gpr_neb.md  gpr_sklearn_trial.md  neb_usage.md  pot_plot.md  pot_usage.md
client/Lanczos/: lanczos.cpp  lanczos.hpp  lanczos_for_eon.cpp  lanczos_for_eon.hpp  oldlanczos.cpp  sort.c  tools.cpp  tools.hpp
client/al/: init
client/archive/include/: archive.h  archive_entry.h
client/archive/lib_win/: libarchive.la
client/bindings/py_srcs/: py_basestructures.cc  py_job.hpp  py_matter.cc  py_nudgedelasticband.cc  py_objectivefunction.hpp  py_optimizer.cc  py_optimizer.hpp  py_parameters.cc  py_potential.cc  py_potential.hpp  (+3 more)
client/client/: DimerConstants.cpp  Eigenvalues.cpp  EpiCenters.cpp
client/common/: HelperFunctions.cpp  HelperFunctions.h  Matter.cpp  Matter.h  MinimizersInterface.h  Potentials.cpp  Potentials.h  QMBox.h  Quickmin.cpp
client/definitions/: PotParams.hpp
client/example/: config.toml  displacement.con  pos.con  react.con
client/gtests/: ASEPotTest.cpp  AdditionalHelpersTest.cpp  AdditionalHelpersTest.h  ApproveMatter.cpp  ApproveMatterWriters.cc  ApproveParams.cpp  AtomsConfigurationTest.cpp  AtomsConfigurationTest.h  CINEBXTBTest.cpp  CMakeLists.txt  ConfInfoTest.cpp  ConfInfoTest.h  ElementTest.cc  EnumTest.cc  EpiCentersTest.cpp  ExtPotTest.cpp  GPRDimerTest.cpp  GPRDimerTest.h  GPRHelpersTest.cpp  GPRHelpersTest.h  GPRPotTest.cpp  GPRPotTest.h  GPRTrainTest.cpp  GPRTrainTest.h  GPR_AIE_NEBJobTest.cpp  GPR_AIE_NEBJobTest.h  IOHelpersTest.cc  ImpDimerTest.cpp  ImpDimerTest.h  MatterCache.cc  MatterTest.cpp  MatterTest.h  MetatomicTest.cpp  MorsePotTest.cpp  MorsePotTest.h  NEBJobGPRTest.cpp  NEBJobGPRTest.h  NEBSetupTest.cpp  NEBSetupTest.h  NEBTest.cpp  (+29 more)
client/helpers/: Create.hpp
client/io/: ConBase.cc  ConWriter.cc  ConWriter.hpp  ConvelWriter.cc  ConvelWriter.hpp  IOBase.cc  IOBase.hpp  IOHelpers.cc  IOHelpers.hpp  TibbleWriter.cc  TibbleWriter.hpp  WriteCreator.cc  WriteCreator.hpp  XYZWriter.cc  XYZWriter.hpp  meson.build
client/matter/: Matter.cpp  Matter.h  MatterCreator.cc  MatterCreator.hpp  MatterHelpers.cc  MatterHelpers.hpp  PeriodicBoundaryConditions.cc  PeriodicBoundaryConditions.hpp  StructComparer.cc  StructComparer.hpp  meson.build
client/notebooks/: api_design.qmd  r_interface.qmd
client/objectives/: MatterObjf.cc  MatterObjf.hpp  meson.build
client/parsers/: ParseJob.cc  ParseJob.hpp  ParseOptim.cc  ParseOptim.hpp  ParsePot.cc  ParsePot.hpp  meson.build
client/potentials/: CMakeLists.txt  FortranPotLoader.cpp  FortranPotLoader.h  ParseTOML.cc  ParseTOML.hpp  PotHelpers.cc  PotHelpers.hpp  PotentialCache.cc  PotentialCache.hpp  meson.build
client/pybinds/: py_job.cc  py_job.hpp  py_log.cc  py_matter.cc  py_nudgedelasticband.cc  py_objectivefunction.cc  py_objectivefunction.hpp  py_optimizer.cc  py_parameters.cc  py_potential.cc  py_potential.hpp  py_wrapper.cc  py_wrapper.hpp  styleguide.org
client/sample/: .parameters_passed.dat.orig  clean  displacement_passed.con
client/subprojects/: gpr_optim.wrap  xtb.wrap
client/unit_tests/: ARTnTest.cpp  ASEPotTest.cpp  ApproveConFileIO.cpp  ApproveMatter.cpp  ApproveParams.cpp  AtomsConfigurationTest.cpp  BondBoostTest.cpp  CINEBXTBTest.cpp  ConFileIOTest.cpp  DimerTest.cpp  DynamicsTest.cpp  EAMAlTest.cpp  EMTCuTest.cpp  EpiCentersTest.cpp  ExtPotTest.cpp  FeHeTest.cpp  GeometryAnalysisTest.cpp  HelperFunctionsTest.cpp  HessianTest.cpp  IRATest.cpp  ImpDimerTest.cpp  JobIntegrationTest.cpp  LammpsLoaderTest.cpp  MatterTest.cpp  MetatomicTest.cpp  MinimizationTest.cpp  NEBMorseTest.cpp  NEBRegressionTest.cpp  NEBSubsystemTest.cpp  ObsTest.cpp  ObsTest.h  OptimizerTest.cpp  ParametersJSONTest.cpp  PotBenchmark.cpp  PotRegistryTest.cpp  PotTest.cpp  ProjectOutRotTransTest.cpp  RgpotPotTest.cpp  SaddleSearchTest.cpp  SiPotTest.cpp  (+8 more)
client/unittests/: Makefile  run_unit_tests.sh  utHelperFunctions.cpp  utHelperFunctions.h  utMainTest.cpp  utObjectiveTest.cpp  utObjectiveTest.h
eon/: __init__.py  _utils.py  akmc.py  akmcstate.py  akmcstatelist.py  amsel_superbasin_gate.py  askmc.py  atoms.py  basinhopping.py  communicator.py  config.py  config.yaml  displace.py  distributedreplica.py  eon_kdb.py  escaperate.py  explorer.py  fileio.py  kdb.py  lammps_bundle.py  locking.py  main.py  meson.build  movie.py  mpiwait.py  mpsuperbasin.py  parallelreplica.py  prstate.py  prstatelist.py  recycling.py  schema.py  server.py  state.py  statelist.py  status_codes.py  superbasin.new  superbasin.py  superbasinscheme.py  version.py
eon/libqd/: Makefile
eon/mcamc/: Makefile  __init__.py  libmcamc.cpp  mcamc.c  mcamc.cpp  mcamc.py  test.py
eon/migrator/: config.py  config.yaml
eon/tests/: ndiff.py  run_tests.sh
(+2798 files in other folders)
