# Booleans
option('with_newpot', type : 'boolean', value : false)
option('with_water', type : 'boolean', value : false)
option('with_ams', type : 'boolean', value : false)
option('with_lammps', type : 'boolean', value : false)
option('with_mpi', type : 'boolean', value : false)
option('with_pybind11', type : 'boolean', value : false, description: '(unused) for python bindings')
option('with_gprd', type : 'boolean', value : false)
option('with_vasp', type : 'boolean', value : false)
option('with_fortran', type : 'boolean', value : true)
option('with_cuh2', type : 'boolean', value : true)
option('with_tests', type : 'boolean', value : true)
option('with_gp_surrogate', type : 'boolean', value : false)
option('with_catlearn', type : 'boolean', value : false)
option('with_gpr_optim', type : 'boolean', value : false)
option('with_xtb', type : 'boolean', value : false)
option('with_ase_orca', type : 'boolean', value : false)
option('with_ase_nwchem', type : 'boolean', value : false)
option('with_ase', type : 'boolean', value : false)
option('with_qsc', type : 'boolean', value : false)
option('use_mkl', type: 'boolean', value: false, description: 'Enable Intel MKL support')
option('with_metatomic', type : 'boolean', value : false)
option('torch_path', type : 'string', value : '', description: 'path to Torch, either provide this or torch_version for pip')
option('torch_version', type : 'string', value : '2.7', description: 'path to Torch')
option('pip_metatomic', type : 'boolean', value : false, description: 'use pip versions of torch, metatensor, torch, and metatomic')

# option('someoption', type : 'string', value : 'optval', description : 'An option')
# option('combo_opt', type : 'combo', choices : ['one', 'two', 'three'], value : 'three')
# option('integer_opt', type : 'integer', min : 0, max : 5, value : 3) # Since 0.45.0
# option('free_array_opt', type : 'array', value : ['one', 'two'])  # Since 0.44.0
# option('array_opt', type : 'array', choices : ['one', 'two', 'three'], value : ['one', 'two'])
# option('some_feature', type : 'feature', value : 'enabled')  # Since 0.47.0
# option('long_desc', type : 'string', value : 'optval',
#        description : 'An option with a very long description' +
#                      'that does something in a specific context') # Since 0.55.0
